<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.WelcomeActivity"
    android:background="@color/grey_50">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:elevation="4dp"
        app:contentInsetStartWithNavigation="0dp"
        android:background="@drawable/curve_toolbar_bg"
        app:layout_scrollFlags="scroll|enterAlways">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/app_icon250"
            android:layout_gravity="center"
            tools:ignore="ContentDescription" />

    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:shadowColor="#000000"
        android:text="@string/welcome_to"
        android:textColor="#000000"
        android:textSize="60sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@id/signupBtn"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="20sp" />


</RelativeLayout>