<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@color/grey_5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_5"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:elevation="4dp"
            app:contentInsetStartWithNavigation="0dp"
            android:background="@drawable/curve_toolbar_bg"
            app:layout_scrollFlags="scroll|enterAlways">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/app_icon250"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham_medium"
                    android:text="@string/toolbar_login"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:layout_marginTop="@dimen/spacing_medium"/>

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_address"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/blue_grey_500"
                    android:textStyle="bold"
                    android:fontFamily="@font/gotham_medium"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/UserName_EdtTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/blue_grey_300"
                    android:theme="@style/EditText.Grey" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mlarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/blue_grey_500"
                    android:textStyle="bold"
                    android:fontFamily="@font/gotham_medium"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Password_EdtTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/blue_grey_300"
                    android:theme="@style/EditText.Grey" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_middle" />

                <TextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|end"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:clickable="true"
                    android:text="@string/forgot_password"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/blue_grey_800"
                    android:focusable="true" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />

                <Button
                    android:id="@+id/Login_Btn"
                    android:layout_width="match_parent"
                    android:layout_height="59dp"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:background="@drawable/btn_rounded"
                    android:text="@string/login"
                    android:textSize="20sp"
                    android:textAllCaps="false"
                    android:fontFamily="@font/gotham_medium"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_medium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_xlarge"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_user"
                        android:fontFamily="@font/gotham_medium"
                        android:textSize="15sp"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:id="@+id/sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:text="@string/sign_up"
                        android:fontFamily="@font/gotham_medium"
                        android:textSize="15sp"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:layout_marginStart="5dp"
                        android:focusable="true" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>