<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPasswordActivity"
    android:background="@color/grey_5"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:elevation="4dp"
        app:contentInsetStartWithNavigation="0dp"
        android:background="@drawable/curve_toolbar_bg"
        app:layout_scrollFlags="scroll|enterAlways">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/forgot_password"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham_medium"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_marginTop="@dimen/spacing_medium"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/spacing_xxlarge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/email_address"
        android:fontFamily="@font/gotham_medium"
        android:paddingStart="@dimen/spacing_xlarge"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        android:inputType="textEmailAddress"
        android:maxLength="50"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/blue_grey_300"
        android:theme="@style/EditText.Grey" />

    <TextView
        android:id="@+id/tv_send_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        android:paddingStart="@dimen/spacing_medium"
        android:paddingEnd="@dimen/spacing_medium"
        android:textSize="15sp"
        android:visibility="invisible"
        android:fontFamily="@font/myfont1"/>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginLeft="@dimen/spacing_xlarge"
        android:layout_marginRight="@dimen/spacing_xlarge"
        android:background="@drawable/btn_rounded"
        android:fontFamily="@font/gotham_medium"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:layout_marginTop="@dimen/spacing_large"/>


</LinearLayout>